<!--
  ~ Copyright 2016 Virtual Rainbow, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="demotracker_title_about">About DemoTracker</string>
    <!-- menu -->
    <string name="action_about">About</string>
    <string name="action_business_trip">Business trip</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <!-- dialogs -->
    <string name="dialog_vehicle_not_checked_in">Vehicle not checked in</string>
    <string name="dialog_license_title">Licenses</string>
    <string name="dialog_add_business_trip">Add a business trip</string>
    <string name="dialog_edit_business_trip">Edit trip</string>
    <string name="dialog_add">Add</string>
    <string name="dialog_check_out">CHECK OUT</string>
    <string name="dialog_check_in">CHECK IN</string>
    <string name="dialog_choose_year">Choose year</string>
    <string name="dialog_choose_make">Choose make</string>
    <string name="dialog_choose_model">Choose model</string>
    <string name="dialog_check_out_vehicle">Check out vehicle</string>
    <string name="dialog_check_in_vehicle">Check in vehicle</string>
    <string name="dialog_edit_vehicle">Edit vehicle</string>
    <string name="dialog_start_edit_or_delete_title">Choose action</string>
    <string name="dialog_delete_confirmation_title">Delete vehicle</string>
    <string name="dialog_delete_confirmation_message">Are you sure that you want to delete this vehicle?</string>
    <string name="dialog_delete_trip_confirmation_title">Delete trip</string>
    <string name="dialog_delete_trip_confirmation_message">Are you sure that you want to delete this trip?</string>

    <!-- card titles -->
    <string name="demoDetails">Details</string>
    <string name="businessDetails">Business trips</string>

    <!-- string format strings -->
    <string name="priceholder">$%1$s</string>

    <!-- edit text hint strings -->
    <string name="idHint">Vehicle ID</string>
    <string name="yearHint">Year</string>
    <string name="makeHint">Make</string>
    <string name="modelHint">Model</string>
    <string name="priceHint">Price</string>
    <string name="dateOutHint">Date out</string>
    <string name="dateInHint">Date in</string>
    <string name="mileageHint">Mileage</string>
    <string name="mileageOutHint">Mileage out</string>
    <string name="mileageInHint">Mileage in</string>
    <string name="businessMilesHint">Business miles</string>

    <!-- snackbar success strings -->
    <string name="add_business_trip_success">Successfully added business trip</string>
    <string name="edit_success">Successfully edited vehicle</string>
    <string name="check_in_success">Successfully checked in vehicle</string>
    <string name="delete_success">Successfully deleted vehicle</string>
    <string name="delete_error">Error deleting vehicle</string>

    <!-- snackbar error strings -->
    <string name="err_msg_add_business_trip">Error adding business trip</string>
    <string name="err_msg_already_checked_in">Vehicle is already checked in</string>
    <string name="err_msg_edit">Error editing vehicle</string>
    <string name="err_msg_check_in">Error checking in vehicle</string>
    <string name="err_msg_delete">Error deleting vehicle</string>

    <!-- text input layout error strings -->
    <string name="err_msg_id_empty">Please enter an ID</string>
    <string name="err_msg_year_empty">Please enter a year</string>
    <string name="err_msg_make_empty">Please enter a make</string>
    <string name="err_msg_model_empty">Please enter a model</string>
    <string name="err_msg_price_empty">Please enter a price</string>
    <string name="err_msg_date_empty">Please enter a date</string>
    <string name="err_msg_mileage_empty">Please enter a mileage</string>
    <string name="err_msg_mileage_in_must_be_higher">Mileage in must be higher than</string>

    <string name="banner_main_ad_id">ca-app-pub-1061136194154268/2422115036</string>
    <string name="banner_details_ad_id">ca-app-pub-1061136194154268/4690923834</string>

    <string name="tap_target_log_primary">Check out your first demo!</string>
    <string name="tap_target_log_secondary">Tap here to start keeping track.</string>
    <string name="tap_target_view_demo_primary">Check in your first demo!</string>
    <string name="tap_target_view_demo_secondary">Tap here to save the final details.</string>
</resources>
