<!--
  ~ Copyright 2016 Virtual Rainbow, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.virtualrainbowllc.demotracker.ui.viewdemo.ViewDemoActivity">
    <item
        android:id="@+id/businessTrip"
        android:title="@string/action_business_trip"
        app:showAsAction="never" />
    <item
        android:id="@+id/edit"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>
