<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Virtual Rainbow, LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.virtualrainbowllc.demotracker.ui.viewdemo.ViewDemoActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_details_ad_id" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/adView">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/coordinator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true">

                <android.support.design.widget.AppBarLayout
                    android:id="@+id/appBarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="176dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <android.support.design.widget.CollapsingToolbarLayout
                        android:id="@+id/collapsingToolbarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:contentScrim="?attr/colorPrimary"
                        app:expandedTitleMarginBottom="72dp"
                        app:expandedTitleMarginEnd="16dp"
                        app:expandedTitleMarginStart="16dp"
                        app:expandedTitleTextAppearance="@style/TextAppearance.Design.CollapsingToolbar.Expanded"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed">

                        <LinearLayout
                            android:id="@+id/idPriceLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginBottom="24dp"
                            android:layout_marginStart="16dp"
                            android:baselineAligned="false"
                            android:orientation="horizontal">


                            <TextView
                                android:id="@+id/idnumber"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="13187492" />

                            <TextView
                                android:id="@+id/price"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_weight="1"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                tools:text="$19998" />
                        </LinearLayout>

                        <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbar"
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            app:layout_collapseMode="pin"
                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                    </android.support.design.widget.CollapsingToolbarLayout>
                </android.support.design.widget.AppBarLayout>

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <RelativeLayout
                            android:id="@+id/detailLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/demoDetailsHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:text="@string/demoDetails"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                            <RelativeLayout
                                android:id="@+id/outLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/demoDetailsHeader"
                                android:layout_margin="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:layout_marginEnd="8dp"
                                    android:text="CHECK OUT" />

                                <TextView
                                    android:id="@+id/dateOut"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="11/18/16" />

                                <TextView
                                    android:id="@+id/mileageOut"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="13568 mi" />
                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/inLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/outLayout"
                                android:layout_margin="16dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerVertical="true"
                                    android:text="CHECK IN" />

                                <TextView
                                    android:id="@+id/dateIn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="11/30/16" />

                                <TextView
                                    android:id="@+id/mileageIn"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                    tools:text="15998 mi" />
                            </RelativeLayout>
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/businessLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_below="@id/detailLayout">

                            <TextView
                                android:id="@+id/businessDetailsHeader"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="16dp"
                                android:text="@string/businessDetails"
                                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                            <android.support.v7.widget.RecyclerView
                                android:id="@+id/recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/businessDetailsHeader"
                                android:layout_marginLeft="8dp"
                                android:layout_marginRight="8dp" />

                        </RelativeLayout>
                    </RelativeLayout>
                </android.support.v4.widget.NestedScrollView>

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_anchor="@id/appBarLayout"
                    app:layout_anchorGravity="bottom|right|end" />
            </android.support.design.widget.CoordinatorLayout>
        </FrameLayout>
    </RelativeLayout>
</layout>